--- a/app/src/main/res/layout/activity_expense.xml
+++ b/app/src/main/res/layout/activity_expense.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ExpenseActivity">
+    tools:context=".Activities.ExpenseActivity">
 
     <TextView
         android:id="@+id/textx"
