--- a/app/src/main/res/layout/activity_income.xml
+++ b/app/src/main/res/layout/activity_income.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".IncomeActivity">
+    tools:context=".Activities.IncomeActivity">
 
     <TextView
         android:id="@+id/textView4"
