--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activities.AccountActivity">
+    tools:context=".activities.AccountActivity">
 
     <TextView
         android:id="@+id/textView9"
@@ -29,7 +29,6 @@
         android:weightSum="99">
 
         <Button
-            android:id="@+id/incomeButton"
             android:layout_width="@android:dimen/notification_large_icon_height"
             android:layout_weight="33"
             android:layout_height="wrap_content"
@@ -41,7 +40,6 @@
             android:textColor="@android:color/background_light" />
 
         <Button
-            android:id="@+id/editBalanceButton"
             android:layout_width="@android:dimen/app_icon_size"
             android:layout_weight="33"
             android:layout_height="wrap_content"
@@ -53,7 +51,6 @@
             android:textColor="@android:color/background_light" />
 
         <Button
-            android:id="@+id/expenseButton"
             android:layout_width="@android:dimen/app_icon_size"
             android:layout_weight="33"
             android:layout_height="wrap_content"
@@ -66,7 +63,6 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/editUpdateButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
