--- a/app/src/main/res/layout/activity_add_currency.xml
+++ b/app/src/main/res/layout/activity_add_currency.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activities.AddCurrencyActivity">
+    tools:context=".activities.AddCurrencyActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,7 +17,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView14"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -26,7 +25,6 @@
                 android:textSize="30sp" />
 
             <TextView
-                android:id="@+id/textView15"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -42,10 +40,10 @@
                 android:inputType="textPersonName"
                 android:singleLine="false"
                 android:text=""
+                android:hint="Name"
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textView16"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -60,10 +58,10 @@
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text=""
+                android:hint="Tag"
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textView17"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -78,10 +76,10 @@
                 android:ems="10"
                 android:inputType="phone"
                 android:text=""
+                android:hint="Link ratio"
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textView18"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -96,6 +94,7 @@
                 android:ems="10"
                 android:inputType="phone"
                 android:text=""
+                android:hint="Point position"
                 android:textSize="18sp" />
 
             <TextView
@@ -114,8 +113,7 @@
 
             <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true">
+                android:layout_height="wrap_content">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -123,7 +121,6 @@
                         android:orientation="vertical">
 
                         <Button
-                            android:id="@+id/addCurrency"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
