--- a/app/src/main/res/layout/activity_currencies.xml
+++ b/app/src/main/res/layout/activity_currencies.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activities.CurrenciesActivity">
+    tools:context=".activities.CurrenciesActivity">
 
     <ScrollView
         android:layout_width="fill_parent"
@@ -13,7 +13,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <ListView
@@ -38,7 +38,6 @@
                         android:orientation="vertical">
 
                         <Button
-                            android:id="@+id/button7"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
@@ -52,7 +51,6 @@
                             android:textColor="@color/white_opaque" />
 
                         <Button
-                            android:id="@+id/button4"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
