--- a/app/src/main/res/layout/activity_edit_currency.xml
+++ b/app/src/main/res/layout/activity_edit_currency.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activities.EditCurrencyActivity">
+    tools:context=".activities.EditCurrencyActivity">
 
 
     <ScrollView
@@ -30,7 +30,7 @@
                 android:id="@+id/editName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autoText="true"
+                android:hint="New name"
                 android:ems="10"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
                 android:id="@+id/editTag"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autoText="true"
+                android:hint="New tag"
                 android:ems="10"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -61,14 +61,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Type new euro ratio"
+                android:text="Type new link ratio"
                 android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/editToDollarRatio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autoText="true"
+                android:hint="New link ratio"
                 android:ems="10"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -87,7 +87,7 @@
                 android:id="@+id/editPointPosition"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autoText="true"
+                android:hint="New point position"
                 android:ems="10"
                 android:inputType="text"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
             <TextView
-                android:id="@+id/textView22"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -110,8 +109,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -119,7 +117,6 @@
                     android:orientation="vertical">
 
                     <Button
-                        android:id="@+id/button6"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
