--- a/app/src/main/res/layout/activity_helper.xml
+++ b/app/src/main/res/layout/activity_helper.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.HelperActivity">
+    tools:context=".activities.HelperActivity">
 
 </android.support.constraint.ConstraintLayout>
