--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activities.SettingsActivity">
+    tools:context=".activities.SettingsActivity">
 
     <ScrollView
         android:layout_width="match_parent"
