--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activities.StartActivity">
+    tools:context=".activities.StartActivity">
 
     <ScrollView
         android:layout_width="fill_parent"
@@ -12,13 +12,11 @@
         android:fillViewport="true">
 
         <LinearLayout
-            android:id="@+id/linearMain"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -49,7 +47,6 @@
                         android:orientation="vertical">
 
                         <Button
-                            android:id="@+id/viewAccounts"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -63,7 +60,6 @@
                             android:textColor="@android:color/background_light" />
 
                         <Button
-                            android:id="@+id/viewCurrencies"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
@@ -77,7 +73,6 @@
                             android:textColor="@android:color/background_light" />
 
                         <Button
-                            android:id="@+id/viewSettings"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
